pts-core: When a newer minor version of a test profile is installed and a requested (older) one is not, use the newer compatible version
pts-core: Rewrite virtual test suite implementation
pts-core: Add handler for ensuring reported system time is accurate, otherwise calculate current date/time using offsets
pts-core: When scanning test suites on disk, ensure the latest test suite version is used
phodevi: Add amd_energy Linux driver support

Phoronix Test Suite 9.6.1
25 May 2020

pts-core: Show unit/scale in CSV export
pts-core: When limiting results to show in result viewer, keep child objects that match the desired type for the parent
pts-core: Add rebuild-test-suite option for regenerating suite XML all cleaned up
pts-core: Allow exporting result files to XML test suites via the result viewer
linux_perf: Reporting many more events
pts-core: External dependency updates
pts_Graph: graph code tweaks
phodevi: Avoid macOS reporting X-Core string before Intel CPU string
phodevi: Sway compositor version detection
phodevi: Detection of newer Arm CPU cores

Phoronix Test Suite 9.6.0
21 April 2020

pts-core: Allow building virtual suites off external dependencies
pts-core: Various result viewer improvements
pts-core: Allow saving results under stress-run
pts-core: Responsive/mobile result viewer improvements
pts-core: Show local tests within the build-suite sub-command
pts-core: Show local suites within the list-installed-suites sub-command
pts_Graph: Restore capability for drawing mini graphs for all results in a result file overview

Phoronix Test Suite 9.6.0 Milestone 3
12 April 2020

pts-core: Allow automated per-thread/core/clock/RAM graphs within the result viewer
pts-core: Result viewer add "Limit displaying results to tests within:"
pts-core: From the result viewer allow "Show Geometric Means Per-Suite/Category"
pts-core: Add workload-topology sub-command
pts-core: Allow adding deprecated tests to build-suite
pts-core: CSV export improvements